# enum-flags

./: CMakeLists.txt
cmake/: common.cmake
include/flags/: flags.hpp
